syntax = "proto3";
package proto;

//Task
message TaskRequest {
  string taskID = 1;
}

message TaskResponse {
  string ID = 1;
  string name = 2;
  string description = 3;
  string status = 4;
  string userID = 5;
  string listID = 6;
  int64 deadline = 7;
}

//User Tasks
message UserTasksRequest {
  string userID = 1;
}

message UserTasksResponse {
  repeated TaskResponse tasks = 1;
}

//List Tasks
message ListTasksRequest {
  string listID = 1;
}

message ListTasksResponse {
  repeated TaskResponse tasks = 1;
}

//Create Task For List
message NewTaskRequest {
  string listID = 1;
  string userID = 2;
  string name = 3;
  string description = 4;
  string status = 5;
  int64 deadline = 6;
}

//Edit Task For List
message EditTaskRequest {
  string taskID = 1;
  NewTaskRequest task = 2;
}

service taskService {
  rpc GetTaskByID(TaskRequest) returns (TaskResponse) {}
  rpc GetTasksForUser(UserTasksRequest) returns (UserTasksResponse) {}
  rpc GetTasksForList(ListTasksRequest) returns (ListTasksResponse) {}
  rpc NewTask(NewTaskRequest) returns (TaskResponse) {}
  rpc EditTask(EditTaskRequest) returns (TaskResponse) {}
}